# PGK-p5

./: CMakeLists.txt  ColorFragmentShader.fragmentshader  TransformVertexShader.vertexshader  tutorial04.cpp
tutorial04_colored_cube/: cfs.fragmentshader  tutorial04.cpp  tutorial04_colored_cube
tutorial04_colored_cube-dir/: cfs.fragmentshader  cfs2.fragmentshader  tutorial04.cpp  tutorial04_colored_cube  tvs.vertexshader
